--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <title>Mesto-React</title>
   </head>
   
-  <body id="root" class="page">
+  <body>
+    <div id="root" class="container"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
